# flow-bundles

./: CHANGELOG.md  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  validate_bundle.py
components/: __init__.py  agent_delegator.py  assistable_ai_client.py  batch_processor.py  ghl_client.py  runtime_hooks.py
components/embeddings/: openai2.py
config/: __init__.py  environment.py  settings.py
docs/: API_REFERENCE.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/: advanced_workflows.py  api_examples.py  basic_usage.py
flows/: agent_delegation_demo.json  ai_calling_campaign.json  c54f9130-f2fa-4a3e-b22a-3856d946351b.json  customer_service_flow.json  lead_qualification.json
scripts/: deploy.py  setup.sh  test_bundle.py
tests/: __init__.py  test_assistable.py  test_ghl.py  test_integration.py
utils/: __init__.py  auth_manager.py  cache_manager.py  error_handler.py  validators.py
